Improve styling: center text

--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en'>
+<html lang="de">
   <head>
     <title>
       Flach wie ne Flunder 
@@ -9,8 +9,10 @@
   </head>
   <body>
     <main>
-      <div class="joke--text">
-	Placeholder
+      <div class="joke">
+        <div class="joke--text">
+	  Placeholder
+        </div>
       </div>
     </main>
   </body>
