Add basic formatting of displayed joke

--- a/site/index.html
+++ b/site/index.html
@@ -10,8 +10,14 @@
   <body>
     <main>
       <div class="joke">
-        <div class="joke--text">
-	  Placeholder
+        <div class="joke--text">  
+          <p>
+	    <noscript>
+              Die Welt ist nicht lustig ohne Javascript :'(
+              <br>
+              Javascript muss aktiviert sein, um die Seite nutzen zu können.
+	    </noscript>
+	  </p>
         </div>
       </div>
     </main>
