Rename "css" folder to "stylesheets"

--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <title>
       Flach wie ne Flunder 
     </title>
-    <link rel="stylesheet" media="all" href="/css/main.css" />
+    <link rel="stylesheet" media="all" href="/stylesheets/main.css" />
     <script src="/javascript/main.js" async="async"></script>
   </head>
   <body>
