Add footer and improve layout

--- a/site/index.html
+++ b/site/index.html
@@ -9,18 +9,29 @@
     <script src="/javascript/main.js" async="async"></script>
   </head>
   <body>
-    <main>
-      <div class="joke">
-        <div class="joke--text">  
-          <p>
-	    <noscript>
-              Die Welt ist nicht lustig ohne Javascript :'(
-              <br>
-              Javascript muss aktiviert sein, um die Seite nutzen zu können.
-	    </noscript>
-	  </p>
-        </div>
+    <div class="layout">
+      <main class="layout--content">
+        <div class="joke">
+          <div class="joke--text">  
+            <p>
+	      <noscript>
+                Die Welt ist nicht lustig ohne Javascript :'(
+                <br>
+                Javascript muss aktiviert sein, um die Seite nutzen zu können.
+              </noscript>
+	    </p>
+	  </div>
+	</div>
+      </main>
+
+      <div class="layout--footer">
+        <div class="footer--hint">
+	  Diese Seite verwendet keine Cookies!
+	</div>
+        <nav>
+          <a href="#">Zugabe!</a>
+        </nav>
       </div>
-    </main>
+    </div>
   </body>
 </html>
