Add button to show another joke

--- a/site/index.html
+++ b/site/index.html
@@ -29,7 +29,7 @@
 	  Diese Seite verwendet keine Cookies!
 	</div>
         <nav>
-          <a href="#">Zugabe!</a>
+          <a class="reload" href="#">Zugabe!</a>
         </nav>
       </div>
     </div>
