--- a/site/index.html
+++ b/site/index.html
@@ -26,10 +26,10 @@
 
       <div class="layout--footer">
         <div class="footer--hint">
-	  Diese Seite verwendet keine Cookies!
+	  Diese Seite verwendet keine Cookies :)
 	</div>
         <nav>
-          <a class="reload" href="#">Zugabe!</a>
+          <a class="reload" href="#">Ich will mehr!</a>
         </nav>
       </div>
     </div>
