--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,8 @@
     <title>
       Flach wie ne Flunder 
     </title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Barriecito&display=swap" rel="stylesheet">
     <link rel="stylesheet" media="all" href="/stylesheets/main.css" />
     <script src="/javascript/main.js" async="async"></script>
   </head>
