--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
+    <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>
       Flach wie ne Flunder 
